examples/test/testpolicy18719.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18719
  namespace: namespace86
spec:
  podSelector:
    matchLabels:
      key30: value39
      key37: value46
      key19: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value13
          key12: value22
          key20: value37
